--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mysql": "^2.17.1",
-    "mysql2": "^1.7.0",
-    "sequelize": "^5.19.0"
+    "mysql2": "^1.7.0"
   }
 }
