--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express-handlebars": "^3.1.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
